# Python-YT-Live-Scraper

./: .gitignore  README.md  README.rst  build.sh  pyproject.toml
docs/source/: conf.py
src/yt_live_scraper/: __init__.py  cli.py  scraper.py
tests/: test_scraper.py
